# dotfiles

./: .gitignore  .gitmodules  Brewfile  README.md  Vagrantfile.d  _vsvimrc  ackrc  bash_aliases  bashrc  bin  bundlerc  bundles.vim  ctags  cvimrc  gitconfig  gitconfig-personal  gitconfig-work  gitconfig.local  init.py  init.sh  kitty.conf  osx.vimrc  pdbrc.py  screen_serversrc  screenrc  scripts.vim  slate.js  starship-claude.toml  starship-simple.toml  starship.toml  tmux.conf  tridactylrc  updatebundles.sh  vimoutlinerrc  vimrc  vrapperrc  vundles.vim  wezterm.lua  wezterm.spin.lua  win.vimrc  (+2 more)
after/: sunmap.vim
autoload/: conque.py  conque_screen.py  conque_subprocess.py  pathogen.vim  vundle.vim
awesome/: quake.lua  rc.lua
conf.d/: 01common.vim  S01-init  S05-hosts  S10-options  S20-env  S30-keys  S40-completion  S45-bash  S50-aliases  S55-git  S56-python  S59-vcs_info  S60-prompt  S65-insert-stwitch  S70-catch-failure  S70-clean-jobs  S70-screen-title  S75-pip-completion  S85-path  S95-multiplex  S95-screen  camelcase.vim  clang_complete.vim  commentary.vim  conque.vim  ctrlp.vim  doxygen.vim  eclim.vim  fuf.vim  helpers.vim  jcomment.vim  latex.vim  marking.vim  powerline.vim  riv.vim  rope.vim  sessions.vim  setup-paths-using-ycm.vim  supertab.vim  tagbar.vim  (+8 more)
config/: plugins.yml
fish/: .gitignore  config.fish  fish_plugins  fish_variables  fishfile  wl.rb
flexget/: .gitignore  config.yml
ftdetect/: pdc.vim
hammerspoon/: init.lua
hydra/: init.lua  update.sh
ipython/: .gitignore  ipy_user_conf.py  ipythonrc
manual/: ropevim  ultisnips
nvim/: lazy-lock.json  lazyvim.json  stylua.toml
obsidian/: rollover-tasks.js
pathogenized/: README  plugins.idnt
pentadactyl/: notes  pentadactylrc
pgcli/: config
shortpath/: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
shortpath/src/: main.rs
tridactyl/: tridactylrc  update-yt.sh  youtube-mode
vim/: .gitignore  _vimrc  en.utf-8.add  vimrc  (+10 more)
vim.bak/: init.vim  vimrc
worktree-util/: .clippy.toml  Cargo.toml  README.md
worktree-util/src/: candidate.rs  candidate_provider.rs  config.rs  lib.rs  navigator.rs  path_shortener.rs  provider.rs  scorer.rs  shell_init.rs  src_provider.rs  test_utils.rs  utils.rs  worktree_collector.rs  worktree_provider.rs  zoxide_scores.rs
worktree-util/src/commands/: mod.rs  nav.rs  shell_init.rs  shortpath.rs  version_check.rs
worktree-util/templates/: fish.fish.hbs  zsh.zsh.hbs
world-nav/: CLAUDE.md  Cargo.toml  README.md  install.sh  rust-toolchain.toml
world-nav/src/: candidate.rs  candidate_provider.rs  config.rs  frecency.rs  lib.rs  navigator.rs  path_shortener.rs  provider.rs  scorer.rs  shell_init.rs  src_provider.rs  test_utils.rs  utils.rs  worktree_collector.rs  worktree_provider.rs  zoxide_scores.rs
world-nav/src/commands/: config.rs  mod.rs  nav.rs  shell_init.rs  shortpath.rs  update_frecency.rs  version_check.rs
world-nav/templates/: fish.fish.hbs  zsh.zsh.hbs
(+277 files in other folders)
