[package]
name = "shortpath"
version = "0.2.0"
edition = "2024"
description = "Path shortening utility for shell prompts"
authors = ["Ryan Wooden"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
git2 = "0.20"
regex = "1.11"

[lints.clippy]
# Deny these lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Specific lints to allow/deny
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
