[package]
name = "worktree-util"
version = "0.3.0"
edition = "2021"
description = "Worktree navigation and path shortening utilities"
authors = ["Ryan Wooden"]

[[bin]]
name = "shortpath"
path = "src/bin/shortpath.rs"

[[bin]]
name = "worktree-nav"
path = "src/bin/worktree-nav.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
git2 = "0.20"
regex = "1.11"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
skim = { version = "0.18", features = [] }
crossbeam-channel = "0.5"
atty = "0.2"

[dev-dependencies]
tempfile = "3.14"
test-case = "3.3"

[lints.clippy]
# Deny these lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Specific lints to allow/deny
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
