[package]
name = "world-nav"
version = "0.5.2"
edition = "2021"
description = "Worktree navigation and path shortening utilities"
authors = ["Ryan Wooden"]
rust-version = "1.89"

[[bin]]
name = "world-nav"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dirs = "6.0"
git2 = "0.20"
regex = "1.11"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
toml = "0.8"
skim = { version = "0.18", features = [] }
crossbeam-channel = "0.5"
atty = "0.2"
walkdir = "2.4"
semver = "1.0"
handlebars = "4.4"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.14"
test-case = "3.3"

[lints.clippy]
# Deny these lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Specific lints to allow/deny
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
